minor bugfixes