@@ -1,3 +1,4 @@
 #!/bin/sh
-export JAVA_OPTS="-Xmx1G -XX:MaxPermSize=384m"
+JAVA_OPTS="-Xms256m -Xmx2048m"
+export JAVA_OPTS
 /tomcat7/bin/catalina.sh run
